ADD_SUBDIRECTORY(QtUi)

SET(CMAKE_LIBRARY_PATH
${CMAKE_SYSTEM_LIBRARY_PATH}
)

if(TARGET omm)
SET(LIB_OMM_AV
ommav
)
SET(LIB_OMM_UTIL
ommutil
)
INCLUDE_DIRECTORIES(
${omm_SOURCE_DIR}/lib
)
else(TARGET omm)
FIND_LIBRARY(LIB_OMM_AV
NAME ommav
PATHS ${CMAKE_LIBRARY_PATH}
)
FIND_LIBRARY(LIB_OMM_UTIL
NAME ommutil
PATHS ${CMAKE_LIBRARY_PATH}
)
endif(TARGET omm)


SET( OMMC_SRCS
ControllerApplication.cpp
)

ADD_EXECUTABLE( ommcontrol
${OMMC_SRCS}
)

TARGET_LINK_LIBRARIES( ommcontrol
${LIB_OMM_AV}
${LIB_OMM_UTIL}
)

INSTALL( TARGETS ommcontrol
RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
)
