FIND_PATH(POCO_INCLUDE_DIR
Poco/Poco.h
PATHS ${CMAKE_INCLUDE_PATH}
)

FIND_LIBRARY(LIB_POCO_FOUNDATION
NAME PocoFoundation
PATHS ${CMAKE_LIBRARY_PATH}
)

if(POCO_INCLUDE_DIR AND LIB_POCO_FOUNDATION)
message(STATUS "Poco headers found in " ${POCO_INCLUDE_DIR})
INCLUDE_DIRECTORIES(
${POCO_INCLUDE_DIR}
)


if(TARGET omm)
SET(LIB_OMM_AV
ommav
)
SET(LIB_OMM_UTIL
ommutil
)
INCLUDE_DIRECTORIES(
${omm_SOURCE_DIR}/lib
)
else(TARGET omm)
FIND_LIBRARY(LIB_OMM_AV
NAME ommav
PATHS ${CMAKE_LIBRARY_PATH}
)
FIND_LIBRARY(LIB_OMM_UTIL
NAME ommutil
PATHS ${CMAKE_LIBRARY_PATH}
)
endif(TARGET omm)

ADD_EXECUTABLE( ommcontrol
ControllerApplication.cpp
)

TARGET_LINK_LIBRARIES( ommcontrol
${LIB_OMM_AV}
${LIB_OMM_UTIL}
${LIB_POCO_FOUNDATION}
)

INSTALL( TARGETS ommcontrol
RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
)

ADD_SUBDIRECTORY(QtUi)

else(POCO_INCLUDE_DIR AND LIB_POCO_FOUNDATION)
message(STATUS "Poco not found")
endif(POCO_INCLUDE_DIR AND LIB_POCO_FOUNDATION)

