FIND_PACKAGE(Qt4)

MESSAGE (STATUS "Use file: ${QT_USE_FILE}")
INCLUDE(
${QT_USE_FILE}
)

SET( JAMMC_SRCS
controllergui.cpp
main.cpp
upnpbrowsermodel.cpp
upnpcontroller.cpp
upnpsyncmediabrowser.cpp
)

SET( JAMMC_UI
# settings.ui
)

SET( JAMMC_MOC
controllergui.h
upnpbrowsermodel.h
upnpcontroller.h
)

INCLUDE_DIRECTORIES(
)

# QT4_WRAP_UI(
# JAMMC_UI_H ${JAMMC_UI}
# )
# 
# GET_FILENAME_COMPONENT(
# JAMMC_UI_H_DIR ${JAMMC_UI_H} PATH
# )

INCLUDE_DIRECTORIES(
${JAMMC_UI_H_DIR}
)

QT4_WRAP_CPP(
JAMMC_MOC_CPP ${JAMMC_MOC}
)

ADD_EXECUTABLE( jammc
${JAMMC_SRCS}
${JAMMC_UI}
${JAMMC_MOC_CPP}
)

TARGET_LINK_LIBRARIES( jammc
/usr/local/lib/libplatinum_upnp.so
${QT_LIBRARIES}
)


ADD_DEFINITIONS(
# -D_REENTRANT -DQT_NO_DEBUG -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_SHARED
# -D_REENTRANT -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_SHARED
)

TARGET_LINK_LIBRARIES( jammc
)

INSTALL( TARGETS jammc
RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
)
