ADD_SUBDIRECTORY(QtUi)

SET(CMAKE_LIBRARY_PATH
${CMAKE_SYSTEM_LIBRARY_PATH}
)

if(TARGET jamm)
SET(LIB_JAMM_AV
jammav
)
INCLUDE_DIRECTORIES(
${jamm_SOURCE_DIR}/jammlib
)
else(TARGET jamm)
FIND_LIBRARY(LIB_JAMM_AV
NAME jammav
PATHS ${CMAKE_LIBRARY_PATH}
)
endif(TARGET jamm)


SET( JAMMC_SRCS
ControllerApplication.cpp
)

ADD_EXECUTABLE( jammc
${JAMMC_SRCS}
)

TARGET_LINK_LIBRARIES( jammc
${LIB_JAMM_AV}
)

INSTALL( TARGETS jammc
RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
)
