CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(jammlight)

SET(CMAKE_LIBRARY_PATH
${CMAKE_SYSTEM_LIBRARY_PATH}
)

FIND_LIBRARY(LIB_POCO_UTIL
NAME PocoUtil
PATHS ${CMAKE_LIBRARY_PATH}
)

if(TARGET jamm)
SET(LIB_JAMM
jamm
)
INCLUDE_DIRECTORIES(
${jamm_SOURCE_DIR}/jammlib
)
else(TARGET jamm)
FIND_LIBRARY(LIB_JAMM
NAME jamm
PATHS ${CMAKE_LIBRARY_PATH}
)
endif(TARGET jamm)

SET( JAMM_LIGHT_SRCS
DimmableLight.cpp
DimmableLightImpl.cpp
DimmableLightApp.cpp
)

SET( JAMM_LIGHT_CTRL_SRCS
DimmableLightCtrl.cpp
DimmableLightCtrlImpl.cpp
DimmableLightCtrlAppl.cpp
)

ADD_EXECUTABLE( jammlight
${JAMM_LIGHT_SRCS}
)

ADD_EXECUTABLE( jammlightctrl
${JAMM_LIGHT_CTRL_SRCS}
)

TARGET_LINK_LIBRARIES( jammlight
${LIB_JAMM}
${LIB_POCO_UTIL}
)

TARGET_LINK_LIBRARIES( jammlightctrl
${LIB_JAMM}
${LIB_POCO_UTIL}
)

INSTALL( TARGETS jammlight jammlightctrl
RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
)
