#ADD_SUBDIRECTORY(AvStream)
#ADD_SUBDIRECTORY(Dvb)

INCLUDE_DIRECTORIES(
${ommlib_SOURCE_DIR}/Omm
)

SET( OMM_LIB_SRCS
Upnp.cpp
)

SET( OMM_AV_LIB_SRCS
UpnpController.cpp
UpnpAvControllers.cpp
UpnpAvDevices.cpp
UpnpAvTypes.cpp
UpnpAvServer.cpp
UpnpAvServerImpl.cpp
UpnpAvRenderer.cpp
UpnpAvRendererImpl.cpp
UpnpAvCtrlImpl.cpp
)

SET( OMM_UTIL_LIB_SRCS
Util.cpp
)

FIND_LIBRARY(LIB_POCO_UTIL
NAME PocoUtil
PATHS ${CMAKE_LIBRARY_PATH}
)

FIND_LIBRARY(LIB_POCO_FOUNDATION
NAME PocoFoundation
PATHS ${CMAKE_LIBRARY_PATH}
)

FIND_LIBRARY(LIB_POCO_NET
NAME PocoNet
PATHS ${CMAKE_LIBRARY_PATH}
)

FIND_LIBRARY(LIB_POCO_XML
NAME PocoXML
PATHS ${CMAKE_LIBRARY_PATH}
)


ADD_LIBRARY(omm
SHARED
${OMM_LIB_SRCS}
)

ADD_LIBRARY(ommav
SHARED
${OMM_AV_LIB_SRCS}
)

ADD_LIBRARY(ommutil
SHARED
${OMM_UTIL_LIB_SRCS}
)

TARGET_LINK_LIBRARIES( omm
${LIB_POCO_FOUNDATION}
${LIB_POCO_NET}
${LIB_POCO_XML}
)

TARGET_LINK_LIBRARIES( ommav
omm
)

TARGET_LINK_LIBRARIES( ommutil
${LIB_POCO_FOUNDATION}
)

INSTALL( TARGETS omm ommav ommutil
LIBRARY DESTINATION lib
)

INSTALL( DIRECTORY ${ommlib_SOURCE_DIR}/Omm
DESTINATION include
FILES_MATCHING PATTERN "*.h"
)
