FIND_PATH(POCO_INCLUDE_DIR
Poco/Poco.h
PATHS ${CMAKE_INCLUDE_PATH}
)
if(POCO_INCLUDE_DIR)
message(STATUS "Poco headers found in " ${POCO_INCLUDE_DIR})
else(POCO_INCLUDE_DIR)
message(SEND_ERROR "Poco headers not found")
endif(POCO_INCLUDE_DIR)

FIND_LIBRARY(LIB_POCO_FOUNDATION
NAME PocoFoundation
PATHS ${CMAKE_LIBRARY_PATH}
)

FIND_LIBRARY(LIB_POCO_UTIL
NAME PocoUtil
PATHS ${CMAKE_LIBRARY_PATH}
)

FIND_LIBRARY(LIB_POCO_NET
NAME PocoNet
PATHS ${CMAKE_LIBRARY_PATH}
)

FIND_LIBRARY(LIB_POCO_XML
NAME PocoXML
PATHS ${CMAKE_LIBRARY_PATH}
)

if(LIB_POCO_FOUNDATION AND LIB_POCO_UTIL AND LIB_POCO_NET AND LIB_POCO_XML)
message(STATUS "Poco libraries found: " ${LIB_POCO_FOUNDATION} ", " ${LIB_POCO_UTIL} ", " ${LIB_POCO_NET} ", " ${LIB_POCO_XML})
else(LIB_POCO_FOUNDATION AND LIB_POCO_UTIL AND LIB_POCO_NET AND LIB_POCO_XML)
message(SEND_ERROR "Poco libraries not found")
endif(LIB_POCO_FOUNDATION AND LIB_POCO_UTIL AND LIB_POCO_NET AND LIB_POCO_XML)


INCLUDE_DIRECTORIES(
${POCO_INCLUDE_DIR}
${ommlib_SOURCE_DIR}/Omm
)

SET( OMM_LIB_SRCS
Upnp.cpp
)

SET( OMM_AV_LIB_SRCS
UpnpController.cpp
UpnpAvController.cpp
UpnpAvControllers.cpp
UpnpAvDevices.cpp
UpnpAvTypes.cpp
UpnpAvServer.cpp
UpnpAvServerImpl.cpp
UpnpAvRenderer.cpp
UpnpAvRendererImpl.cpp
UpnpAvCtrlImpl.cpp
)

SET( OMM_UTIL_LIB_SRCS
Util.cpp
)

ADD_LIBRARY(omm
SHARED
${OMM_LIB_SRCS}
)

ADD_LIBRARY(ommav
SHARED
${OMM_AV_LIB_SRCS}
)

ADD_LIBRARY(ommutil
SHARED
${OMM_UTIL_LIB_SRCS}
)

TARGET_LINK_LIBRARIES( ommutil
${LIB_POCO_FOUNDATION}
)

TARGET_LINK_LIBRARIES( omm
${LIB_POCO_FOUNDATION}
${LIB_POCO_NET}
${LIB_POCO_XML}
)

TARGET_LINK_LIBRARIES( ommav
omm
)

INSTALL( TARGETS omm ommav ommutil
LIBRARY DESTINATION lib
)

INSTALL( DIRECTORY ${ommlib_SOURCE_DIR}/Omm
DESTINATION include
FILES_MATCHING PATTERN "*.h"
)

ADD_SUBDIRECTORY(AvStream)
ADD_SUBDIRECTORY(Dvb)
